--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>llm side panel</title>
+    <title>R&D_AC test</title>
     <style>
         .container {
             position: absolute;
